# floret

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  config.prod.alloy  deploy.sh  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  justfile  manage.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.in  requirements.txt  robots.txt  tailwind.config.js
.github/workflows/: deploy.yml  lint.yml  test.yml
account/: admin.py  constants.py  enums.py  forms.py  managers.py  models.py  tasks.json  tasks.py  types.py  urls.py  utils.py
account/fixtures/: factories.py  fixtures.yml
account/migrations/: 0001_initial.py  0002_user_email_verified_at.py  0003_user_mfa_enabled_device_browser_ipaddress.py  0004_alter_device_device_memory.py
account/templates/: device_block_confirm.html  device_delete_confirm.html  login.html  password_reset_confirmation.html  profile.html  signup.html  two_factor_notice.html
account/templates/partials/: device_card.html  device_detail.html  device_list.html
account/tests/: conftest.py  test_models.py  test_two_factor.py  test_views.py
account/views/: auth.py  password_reset.py  profile.py  two_factor.py
common/integrations/: postmark.py
common/mixins/: base.py  forms.py
common/utils/: time.py
floret/: asgi.py  settings.py  urls.py  wsgi.py
floret/management/commands/: load_fixtures.py  setup_schedules.py
floret/middleware/: request_logging.py
home/templates/: index.html
planner/: admin.py  models.py  urls.py  views.py
planner/fixtures/: fixtures.json
planner/migrations/: 0001_initial.py
planner/templates/: garden_planner.html  garden_summary.html  index.html
planner/templates/partials/: mini_summary.html  plant_card.html  plant_filter.html  plant_list.html
theme/src/: styles.css
theme/static/: device-fingerprint.js  garden-planner.js  garden-state.js  garden-summary.js  plant-filter.js
theme/templates/: base.html  form.html
theme/templates/components/: alert.html  footer.html  messages.html  navbar.html
theme/templates/icons/: block-x.html  browser.html  caret-down.html  caret-up.html  checkmark-circle.html  close.html  error-circle.html  error.html  info.html  menu-dots.html  network.html  shield.html  success.html  trash.html  warning-triangle.html  warning.html
