[project]
name = "floret"
version = "0.1.0"
description = "A flower garden companion app"

[tool.ruff]
# Target Python 3.12+
target-version = "py312"

# Line length to match Black's default
line-length = 98

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    "migrations",
    "node_modules",
    "static",
    "staticfiles",
    "media",
]

[tool.ruff.lint]
# Enable recommended rules + Django-specific rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "DJ",  # django-specific rules
    "UP",  # pyupgrade
]

# Allow unused variables when prefixed with underscore
ignore = []

[tool.ruff.lint.isort]
# Django-specific import ordering
known-first-party = ["account", "floret", "common", "planner", "theme"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use double quotes (Django standard)
quote-style = "double"

# Indent with spaces
indent-style = "space"

[tool.djlint]
# Django template linting and formatting
profile = "django"
indent = 2
max_line_length = 120
format_attribute_template_tags = true

# Ignore common rules:
# H006 - img tag should have height and width attributes (not always needed)
# H030 - Consider adding a meta description (not needed in all templates)
# H031 - Consider adding meta keywords (outdated SEO practice)
ignore = "H006,H030,H031"

# Exclude directories
exclude = "migrations,node_modules,htmlcov,static,staticfiles,media,.venv,venv"

[tool.pytest.ini_options]
# Pytest configuration
DJANGO_SETTINGS_MODULE = "floret.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--reuse-db",
    "--color=yes",
    "--tb=short",
]
testpaths = ["account", "planner", "common"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
# Coverage configuration
source = ["."]
relative_files = true
data_file = "/tmp/.coverage"
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/node_modules/*",
    "*/static/*",
    "*/staticfiles/*",
    "*/venv/*",
    "*/.venv/*",
    "manage.py",
]

[tool.coverage.report]
# Show missing lines in coverage report
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
# HTML coverage report directory
directory = "/tmp/htmlcov"

[tool.coverage.xml]
# XML coverage report output
output = "/tmp/coverage.xml"

[tool.basedpyright]
# Basedpyright type checking configuration
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "venv",
    "**/migrations",
    "staticfiles",
]
# Django-specific settings
reportOptionalMemberAccess = false
reportGeneralTypeIssues = false
